--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -44,9 +47,6 @@ dependencies {
     // Firebase UI
     def ver_firebaseui = "6.2.1"
     implementation "com.firebaseui:firebase-ui-auth:$ver_firebaseui"
-
-    // SpinKit
-    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
     // Material Design
     def ver_materialdesign = "1.2.1"
