--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".view.SigninActivity">
+        <activity android:name=".signin.PhoneVerifyActivity" />
+        <activity android:name=".signin.PhoneSignInActivity" />
+        <activity android:name=".main.MainActivity" />
+        <activity android:name=".signin.SigninActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
