--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".room.ChatRoomActivity"></activity>
-        <activity android:name=".main.chat.JoinChatRoomActivity" />
+        <activity android:name=".room.ChatRoomActivity" />
+        <activity android:name=".main.joinroom.JoinChatRoomActivity" />
         <activity android:name=".signin.PhoneVerifyActivity" />
         <activity android:name=".signin.PhoneSignInActivity" />
         <activity
