--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -57,4 +62,14 @@ dependencies {
 
     // Keyboard visibility listener
     implementation 'com.github.ravindu1024:android-keyboardlistener:1.0.0'
+
+    // Retroift
+    def ver_retrofit2 = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$ver_retrofit2"
+    implementation "com.squareup.retrofit2:converter-gson:$ver_retrofit2"
+
+    // Glide
+    def ver_glide = "4.11.0"
+    implementation "com.github.bumptech.glide:glide:$ver_glide"
+    annotationProcessor "com.github.bumptech.glide:compiler:$ver_glide"
 }
