--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,13 +48,13 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     // DB
-    implementation "com.google.firebase:firebase-database-ktx:19.5.1"
+    implementation "com.google.firebase:firebase-database-ktx:19.6.0"
     // Firebase UI
     def ver_firebaseui = "6.2.1"
     implementation "com.firebaseui:firebase-ui-auth:$ver_firebaseui"
 
     // Material Design
-    def ver_materialdesign = "1.2.1"
+    def ver_materialdesign = "1.3.0"
     implementation "com.google.android.material:material:$ver_materialdesign"
 
     // Youtube Player
@@ -74,6 +74,6 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$ver_glide"
 
     // activity result
-    implementation 'androidx.activity:activity-ktx:1.2.0-rc01'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0-rc02'
+    implementation 'androidx.activity:activity-ktx:1.3.0-alpha03'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
 }
