--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
@@ -76,4 +77,9 @@ dependencies {
     // activity result
     implementation 'androidx.activity:activity-ktx:1.3.0-alpha03'
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
+
+    def room_version = "2.2.6"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
