--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".YoutubeVideoSelectionActivity"
+            android:name=".room.content.videoselection.YoutubeVideoSelectionActivity"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".room.ChatRoomActivity"
