--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".signin.PhoneSignInActivity" />
         <activity
             android:name=".main.MainActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout" />
+            android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
+            android:theme="@style/AppTheme" />
         <activity android:name=".signin.SigninActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
