--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,11 +75,13 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$ver_glide"
 
     // activity result
-    implementation 'androidx.activity:activity-ktx:1.3.0-alpha03'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+    implementation 'androidx.activity:activity-ktx:1.3.0-alpha05'
+    implementation 'androidx.fragment:fragment-ktx:1.3.2'
 
     def room_version = "2.2.6"
-
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // Draggable panel
+    implementation 'com.github.hoanganhtuan95ptit:DraggablePanel:1.2.5'
 }
