--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
+apply plugin: 'com.google.firebase.crashlytics'
+
 android {
     compileSdkVersion 29
 
@@ -53,6 +55,9 @@ dependencies {
     // Firebase UI
     def ver_firebaseui = "6.2.1"
     implementation "com.firebaseui:firebase-ui-auth:$ver_firebaseui"
+    // Crashlytics
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     // Material Design
     def ver_materialdesign = "1.3.0"
@@ -75,7 +80,7 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$ver_glide"
 
     // activity result
-    implementation 'androidx.activity:activity-ktx:1.3.0-alpha05'
+    implementation 'androidx.activity:activity-ktx:1.3.0-alpha06'
     implementation 'androidx.fragment:fragment-ktx:1.3.2'
 
     def room_version = "2.2.6"
