--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "com.start3a.ishowyou"
         minSdkVersion 26
         targetSdkVersion 29
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 5
+        versionName "1.0.5"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -58,6 +58,8 @@ dependencies {
     // Crashlytics
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    implementation 'com.android.support:support-annotations:28.0.0'
 
     // Material Design
     def ver_materialdesign = "1.3.0"
